static/css/style.css
*{
    padding: 0;
    margin: 0;
    text-align: center;
    
}
html{
    scroll-behavior: smooth;
}
a{
    text-decoration: none;
    color: var(--nav_text);
}
li{
    font-family: 'Crimes Times Six';
}

@media only screen and (max-width: 768px) {
    .main{
        display: flex;
        flex-direction: column;
    }
    section{
        display: flex;
        flex-direction: column-reverse;
    }
    nav{
        display: none;
    }
    .toggler{
        display: block;
        height: 5vh;
        background-color: gray;
        img{
            height: 2vh;
            width: 2vh;
            display: inline-block;
        }
        ul{
            display: none;
        }
    }
    .show{
        display: block;
        ul{
            display: flex;
            flex-direction: column;
        }
    }

}
.toggler{
    display: flex;
    justify-content: center;
    align-items: center;

}
@media (min-width: 768px) {
    .toggler {
        display: none;
    }
    
}

:root{
    --nav:rgb(227, 210, 125);
    --nav_text:rgb(86, 68, 3);
    --separator:rgb(170, 139, 3);
    --section:rgb(170, 139, 3);
    --button:rgba(32,55,67,0.6);
    --btn_text:white;
}
.dark-theme{
    --btn_text:rgb(255, 255, 255);
    --button:rgba(32, 55, 67, 0.6);
    --nav:rgb(41, 39, 32);
    --nav_text:rgb(254, 238, 206);
    --separator:rgba(107, 87, 1, 0.979);
    --section:rgba(107, 87, 1, 0.979);
}
nav{
    background-color: var(--nav);
    font-style: italic;
    z-index: 20;
    color: var(--nav_text);
    font-size: 19px;
    width: 100vw;
    position: fixed;
}
.switch img{
    width: 25px;
    height: 25px;
    padding: 0;
    margin: 0;
}
ul{
    display: flex;
    justify-content: space-around;
    
}
ul li{
    list-style: none;
    padding: 16px;
    cursor: pointer;
}

.separator{
    height: 1.5vh;
    background-color: var(--separator);
}

section {
    background-color: var(--section);
    color: text;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 93vh;
    position: relative;
    padding: 30px;
    font-size: 50px;
}
.desc{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 50%;
    padding: 50px;
}
.description{
    font-size: 40px;
    font-family: 'Freestyle Script';
    padding: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.img{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 50%;
    height: 60vh;
    img{
        border-radius: 50px;
        width: 100%;
        height: 100%;
        
    }
}
.btn{
    padding: 20px;
}
.heading{
    
    font-family: 'Crimes Times Six';
}
button{
    padding: 20px;
    font-family: sans-serif;
    font-size: 25px;
    border-radius: 15px;
    border: none;
    background-color: var(--button);
    color: var(--btn_text);
    cursor: pointer;
}

